# pymetal-cpp

./: CHANGELOG.md  Makefile  PROJECT_REVIEW.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: THREAD_SAFETY.md  api.md  metal_wrapper_analysis.md
examples/: README.md
src/: CMakeLists.txt  _pymetal.cpp
src/pymetal/: __init__.py  __init__.pyi  __main__.py  advanced.py  chuck_lang.py  compute.py  enums.py  exceptions.py  graphics.py  shader.py  types.py
src/pymetal/tui/: __init__.py
tests/: test_benchmarks.py  test_edge_cases.py  test_new_features.py  test_phase1_compute.py  test_phase2_advanced.py  test_phase2_graphics.py  test_phase3_advanced.py  test_validation.py
